Issue with mobile device should be resolved.
Section-2 Seemed to have its images or text overflowing. Set a width of 200px for each project container.

--- a/styles.css
+++ b/styles.css
@@ -55,9 +55,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    flex-wrap: wrap;
     padding: 50px;
-    overflow-x: hidden;
 
     
 }
@@ -68,21 +66,24 @@
 }
 .s2-project-container{
     display: flex;
-    gap: 40px;
 
 }
 .project-container{
     display: flex;
+    flex-wrap: wrap;
+    gap: 20px
+}
+.project-temp{
+    display: flex;
     flex-direction: column;
-    width: 100%;
-    text-align: center; 
+    text-align: center;
+    width: 250px;
+    
 }
-.project-img{
-
+.project-temp img{
+    width: 100%; /* Make sure the image takes up the full width of its container */
+    height: auto;
 }
-
-
-
 .manga-img-container{
     display: flex;
     justify-content: center;
